--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }//BINDING
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "TwitterClone"
