--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,19 +51,20 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //BINDING
+    //BINDING Fragment
     implementation 'com.github.Zhuinden:fragmentviewbindingdelegate-kt:1.0.0'
 
     //Navigate
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.2"
     implementation "androidx.navigation:navigation-ui-ktx:2.4.2"
-
-
+//LikeButton
+    implementation 'com.github.jd-alexander:LikeButton:0.2.3'
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.google.code.gson:gson:2.8.9'
+    //implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
 
@@ -80,8 +81,8 @@ dependencies {
     //Retrofit with Moshi Converter
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
-    // Glide resim
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //Shimmer Layout
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
@@ -95,7 +96,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
 
-    //Inject
-    implementation "com.google.dagger:hilt-android:2.42"
 
 }
