--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx'
 
 
+    //ktor Interceptor
+
+    implementation "io.ktor:ktor-client-core:1.6.3"
+    implementation "io.ktor:ktor-client-android:1.6.3"
+    implementation "io.ktor:ktor-client-serialization:1.6.3"
+    implementation "io.ktor:ktor-client-logging:1.6.3"
+    implementation "ch.qos.logback:logback-classic:1.2.7"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
+
+
 }
