--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+
     }
 }
 
@@ -55,8 +56,8 @@ dependencies {
     implementation 'com.github.Zhuinden:fragmentviewbindingdelegate-kt:1.0.0'
 
     //Navigate
-    implementation "androidx.navigation:navigation-fragment-ktx:2.4.2"
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.2"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.0"
 //LikeButton
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
     //Retrofit
@@ -65,15 +66,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3'
 
     //ViewModel
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
+    implementation 'androidx.activity:activity-ktx:1.5.0'
     // implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     //LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0"
 
     // Moshi
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
@@ -88,7 +89,7 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     //Lotti
-    implementation "com.airbnb.android:lottie:4.2.1"
+    implementation "com.airbnb.android:lottie:5.2.0"
 
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:28.3.0')
@@ -106,6 +107,7 @@ dependencies {
     implementation "ch.qos.logback:logback-classic:1.2.7"
 
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
-
+    //
+    implementation 'com.github.yatindeokar:MyLoadingButton:v1.0.1'
 
 }
