--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,8 +66,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     //ViewModel
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
@@ -100,14 +100,15 @@ dependencies {
 
 
     //ktor Interceptor
-    implementation "io.ktor:ktor-client-core:1.6.3"
+    implementation "io.ktor:ktor-client-core:2.0.3"
     implementation "io.ktor:ktor-client-android:1.6.3"
-    implementation "io.ktor:ktor-client-serialization:1.6.3"
+    implementation 'io.ktor:ktor-client-serialization:2.0.3'
     implementation "io.ktor:ktor-client-logging:1.6.3"
     implementation "ch.qos.logback:logback-classic:1.2.7"
 
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
-    //
-    implementation 'com.github.yatindeokar:MyLoadingButton:v1.0.1'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
 }
