--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,7 +108,11 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
 
+    //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //MenuDrawers
+    implementation 'co.zsmb:materialdrawer-kt:3.0.0'
+    implementation 'com.google.android.material:material:1.6.1'
 
 }
