like column added to room

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id 'com.google.gms.google-services'
     id 'kotlin-parcelize'
 
+
 }
 
 android {
@@ -118,6 +119,10 @@ dependencies {
     //Room
     implementation "androidx.room:room-runtime:2.4.3"
     kapt "androidx.room:room-compiler:2.4.3"
+    annotationProcessor "androidx.room:room-compiler:2.4.3"
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.4.3"
+
+    //ImageLoader
+    implementation"io.coil-kt:coil:2.1.0"
 }
