--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,4 +134,5 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.42"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     annotationProcessor "com.google.dagger:dagger-android-processor:2.11"//InjectProcessingStep was unable to process
+    implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
 }
