--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,6 @@ dependencies {
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    //implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //coroutines
@@ -133,6 +132,7 @@ dependencies {
     kapt 'com.google.dagger:hilt-compiler:2.43.2'
     kapt "com.google.dagger:hilt-android-compiler:2.42"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
-    annotationProcessor "com.google.dagger:dagger-android-processor:2.11"//InjectProcessingStep was unable to process
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.11"
+//InjectProcessingStep was unable to process
     implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
 }
